# raspberry-app

./: .gitignore  Cargo.toml  README.md  agent.md  build.rs  run-clock.sh  开发SOP.md
.cargo/: config.toml
docs/: decisions.md  iteration-log.md  prd-healing-life.md
docs/superpowers/plans/: 2026-06-24-focus-clock.md  2026-07-01-daily-quote-image-cache.md
docs/superpowers/specs/: 2026-06-24-focus-clock-design.md  2026-07-01-daily-quote-image-cache-design.md
scripts/: bootstrap-pi.sh  deploy-and-run-pi.sh  install-autostart.sh  watch-clock.sh
src/: daily_quote.rs  display_power.rs  domain.rs  index.html  main.rs
tests/: install-autostart.sh  run-clock-config.sh  ui-font-sizes.sh  watch-clock-config.sh
ui/: clock.slint
