[package]
name = "raspberry-clock"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slint = { version = "=1.13.1", default-features = false, features = ["std", "compat-1-2", "backend-winit-x11", "renderer-software"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }

[build-dependencies]
slint-build = "=1.13.1"

[profile.release]
codegen-units = 1
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
debug = 0
incremental = false
panic = "abort"
strip = true
